# CMakeshift

./: .gitignore  CMakeLists.txt  CMakeshiftConfig.cmake.in  CMakeshiftConfigTail.cmake  LICENSE.txt
cmake/: CMakeshiftConfig.cmake.in  FindCMakeshift.cmake  FindClara.cmake  FindFilesystem.cmake  FindITTNotify.cmake  FindTBB.cmake
cmake/CMakeshift/: CMakeshift.cmake  CheckAllCatchTestsFound.cmake.in  DefaultFlags.cmake  Install.cmake  InstallBasicPackageFiles.cmake  InstallSimpleLibraryPackage.cmake  ParseAndAddCatchTests.cmake  SetTargetArchitecture.cmake  TargetArchitecture.cmake  TargetCompileSettings.cmake
cmake/CMakeshift/detail/: InstallDependencies.cmake  Settings-Architecture.cmake  Settings-Default.cmake  Settings-Diagnostics.cmake  Settings-RuntimeChecks.cmake  utf8.manifest
cmake/CMakeshift/detail/templates/: Config.cmake.in  ConfigVersion-BuildType.cmake.in
cmake/CMakeshift/modules/: FindCUB.cmake  FindClara.cmake  FindFilesystem.cmake  FindGSL.cmake  FindHSL.cmake  FindHedley.cmake  FindITTNotify.cmake  FindMS-GSL.cmake  FindNuma.cmake  FindParallelAlgorithms.cmake  FindSphinx.cmake  FindThrust.cmake  FindUMESIMD.cmake  Findcurand.cmake
doc/: CMake copyright.txt  CMakeLists.txt  cmake-objects.inv  cmake.py  conf.py.in  index.rst
doc/modules/: InstallBasicPackageFiles.rst
doc/static/: CMakeshift.css
include/CMakeshift/: InstallBasicPackageFiles.cmake  InstallSimpleLibraryPackage.cmake  SetLibraryVersion.cmake  SetTargetArchitecture.cmake  SetTargetCompilerSettings.cmake  TargetArchitecture.cmake  TargetCompileSettings.cmake  TargetLibraryVersion.cmake
include/CMakeshift/detail/: CMakeshift_AddressSanitizer_CUDA_workaround.cu  Install.cmake  InstallDependencies.cmake  Settings-Architecture.cmake  Settings-Default.cmake  Settings-Diagnostics.cmake  Settings-Other.cmake  Settings-RuntimeChecks.cmake  Trace.cmake
include/CMakeshift/modules/: FindClara.cmake  FindMS-GSL.cmake  FindNuma.cmake  FindUMESIMD.cmake
include/CMakeshift/templates/: ConfigVersion-BuildType.cmake.in
src/: CMakeLists.txt
